completed signup form on signup.erb

--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,1 +1,7 @@
-"Hi"
+<form method="post" action="/signup">
+  <label for="name">Name: </label>
+  <input type="text" name="user[name]" id="name">
+  <label for="password">Password: </label>
+  <input type="text" name="user[password]" id="password">
+  <input type="submit">
+</form>
