--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,7 +1,7 @@
 <form method="post" action="/signup">
   <label for="name">Name: </label>
-  <input type="text" name="user[name]" id="name">
+  <input type="text" name="username" id="name">
   <label for="password">Password: </label>
-  <input type="text" name="user[password]" id="password">
+  <input type="text" name="password" id="password">
   <input type="submit">
 </form>
