--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,6 +1,8 @@
 <form method="post" action="/signup">
   <label for="name">Name: </label>
   <input type="text" name="username" id="name">
+  <label for="email">Email: </label>
+  <input type="text" name="email" id="email">
   <label for="password">Password: </label>
   <input type="text" name="password" id="password">
   <input type="submit">
