reset tables, seeded new instance of game

--- a/app/views/characters/new.erb
+++ b/app/views/characters/new.erb
@@ -10,5 +10,6 @@
     <% genders.each do |gender| %>
       <input type="checkbox" name="character[gender]" id="gender"><%= gender%></input>
     <% end %></p>
+  <p><label for="game_list">Pick an existing game: </label>
   <input type="submit">
 </form>
