control flow for new/existing games when creating characters

--- a/app/views/characters/new.erb
+++ b/app/views/characters/new.erb
@@ -4,8 +4,8 @@
   <input type="text" name="character[name]" id="name"></p>
   <p><label for="race">Race: </label>
   <input type="text" name="character[race]" id="race"></p>
-  <p><label for="class">Class: </label>
-  <input type="text" name="character[class]" id="class"></p>
+  <p><label for="combat_class">Class: </label>
+  <input type="text" name="character[combat_class]" id="combat_class"></p>
   <p><label for="gender">Gender: </label>
     <% genders.each do |gender| %>
       <input type="radio" name="character[gender]" id="gender" value="<%= gender %>"><%= gender%></input>
