--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,3 @@
-<h1>Welcome to Skyrim Character Builder!</h1>
+<h1>Welcome to RPG Hero Maker!</h1>
 
 <p><a href="/signup">Sign Up</a> or <a href="/login">Login</a></p>
