created layout.erb for yielding view formatsmats, added 'logout' link to layout footer

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,5 @@
-<h1>Welcome to RPG Hero Maker!</h1>
+<h2>Welcome to RPG Character Builder!</h2>
+
+<p>This app lets you save and check the details of the favorite video game characters you've CGed.</p>
 
 <p><a href="/signup">Sign Up</a> or <a href="/login">Login</a></p>
