--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,8 +1,13 @@
 <h2>Hello, <%= @user.username %>.</h2>
 
-<h3>Existing Characters</h3>
+<h3>Your Characters:</h3>
 <% @user.characters.each do |character| %>
   <p><a href="/characters/<%= character.id%>"><%= character.name %></a></p>
 <% end %>
-
+<br>
+<h3>Your Games:</h3>
+<% @user.games.each do |game| %>
+  <p><a href="/games/<%= game.id %>"><%= game.name %></a></p>
+<% end %>
+<br>
 <p><a href="/characters/new">Create Character</a></p>
