--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -7,3 +7,4 @@
   <input type="password" name="password" id="password">
   <input type="submit">
 </form>
+<p><%= flash[:error] if flash[:error] %></p>
