--- a/app/views/games/index.erb
+++ b/app/views/games/index.erb
@@ -1,4 +1,4 @@
 <h2>All Games</h2>
-<% Game.all.each do |game| %>
+<% @games.each do |game| %>
   <p><a href="/games/<%= game.id %>"><%= game.name %></a></p>
 <% end %>
